# rust-aws-lambda-contact-form

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/templates/: mail_body.txt
