[package]
name = "aws-lambda-contact-form"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Kolbe <kontakt@christopherkolbe.de>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
lambda_runtime = "0.8.3"
serde = "1.0.136"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }