[package]
name = "aws-lambda-contact-form"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Kolbe <kontakt@christopherkolbe.de>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
lambda_runtime = "0.9.1"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = "z"
lto = true
codgen-units = 1
panic = "abort"
strip = "debuginfo"
